迭代与story 细化
